--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "nitric typescript starter template",
   "private": true,
   "dependencies": {
-    "@nitric/sdk": "^1.3.3"
+    "@nitric/sdk": "^1.3.3",
+    "openai": "^4.85.1",
+    "util": "^0.12.5",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
